crates/salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__feature_track.snap
---
source: salti/src/ui/panes/alignment.rs
expression: "render_text(&session, Some(&gff), &full_window(&session),\nRect::new(0, 0, 100, 12))"
---
┌───────────────────────────────────────────────────────────────────────────────┐
│     Spike   →                                                                 │
│1       10                                                                     │
│.   .    |    .                                                                │
│CATCATCATCATCATCAT                                                             │
│CATCATCATCATCATCAT                                                             │
│CATCATCATCATCATCAT                                                             │
└───────────────────────────────────────────────────────────────────────────────┘
