crates/salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__pinned_scrolled.snap
---
source: salti/src/ui/panes/alignment.rs
expression: "render_text(&session, None, &window, Rect::new(0, 0, 100, 12))"
---
┌───────────────────────────────────────────────────────────────────────────────┐
│1       10                                                                     │
│.   .    |    .                                                                │
│CCCCATCATCATCATCAT                                                             │
│ACGCATCATCATCATCAT                                                             │
│───────────────────────────────────────────────────────────────────────────────│
│TTTCATCATCATCATCAT                                                             │
└───────────────────────────────────────────────────────────────────────────────┘
