crates/salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__scrolled.snap
---
source: salti/src/ui/panes/alignment.rs
expression: "render_text(&session, None, &window, Rect::new(0, 0, 60, 12))"
---
┌───────────────────────────────────────────────┐
│        20        30                           │
│    .    |    .    |    .                      │
│ATCATCATCATCATCATCATCATCAT                     │
│ATCATCATCATCATCATCATCATCAT                     │
│ATCATCATCATCATCATCATCATCAT                     │
│                                               │
└─────────────▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬┘
