crates/salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__translated_diff_reference.snap
---
source: salti/src/ui/panes/alignment.rs
expression: render_full(&session)
---
┌───────────────────────────────────────────────────────────────────────────────┐
│1       10                                                                     │
│.   .    |    .                                                                │
│ .  .  D  .  .  .                                                              │
│ .  .  .  .  D  .                                                              │
│                                                                               │
│                                                                               │
└───────────────────────────────────────────────────────────────────────────────┘
